*SVN*

* Hooked #ordinalize into Fixnum and Bignum classes. [Nicholas Seckar, danp]

* Added stripping of _id to humanize, so "employee_id" becomes "Employee" #1574 [Justin French]

* Added Fixnum#ordinalize to turn 1.ordinalize to "1st", 3.ordinalize to "3rd", and 10.ordinalize to "10th" and so on #1724 [paul@cnt.org]


*1.1.1* (11 July, 2005)

* Added more efficient implementation of the development mode reset of classes #1638 [Chris McGrath]


*1.1.0* (6 July, 2005)

* Fixed conflict with Glue gem #1606 [Rick Olson]

* Added new rules to the Inflector to deal with more unusual plurals mouse/louse => mice/lice, information => information, ox => oxen, virus => viri, archive => archives #1571, #1583, #1490, #1599, #1608 [foamdino@gmail.com/others]

* Fixed memory leak with Object#remove_subclasses_of, which inflicted a Rails application running in development mode with a ~20KB leak per request #1289 [c.r.mcgrath@gmail.com]

* Made 1.year == 365.25.days to account for leap years.  This allows you to do User.find(:all, :conditions => ['birthday > ?', 50.years.ago]) without losing a lot of days.  #1488 [tuxie@dekadance.se]

* Added an exception if calling id on nil to WhinyNil #584 [kevin-temp@writesoon.com]

* Added Fix/Bignum#multiple_of? which returns true on 14.multiple_of?(7) and false on 16.multiple_of?(7) #1464 [Thomas Fuchs]

* Added even? and odd? to work with Bignums in addition to Fixnums #1464 [Thomas Fuchs]

* Fixed Time#at_beginning_of_week returned the next Monday instead of the previous one when called on a Sunday #1403 [jean.helou@gmail.com]

* Increased the speed of indifferent hash access by using Hash#default.  #1436 [Nicholas Seckar]

* Added that "   " is now also blank? (using strip if available)

* Fixed Dependencies so all modules are able to load missing constants #1173 [Nicholas Seckar]

* Fixed the Inflector to underscore strings containing numbers, so Area51Controller becomes area51_controller #1176 [Nicholas Seckar]
